test/scc/decl/semantic-errors/055.t
void foo(extern int a)
{
}